--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -249,6 +249,10 @@
             None.
           {% endfor %}
         </div>
+      {% empty %}
+          <div class="list-group-item">
+            None.
+          </div>
       {% endfor %}
       </div> <!--list-group -->
     </div> <!-- panel -->
