suggestion box out of beta! resolves #83

--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -105,7 +105,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="{% url 'suggestions:list' %}"><i class="fa fa-fw fa-lightbulb-o"></i>&nbsp;&nbsp;Suggestion
-                            Box BETA</a></li>
+                            Box</a></li>
                         <li>
                             <a href="{% url 'maps:primary' %}">
                                 <i class="fa fa-fw fa-map-signs"></i>&nbsp;&nbsp;Quest Map (new)</a></li>
