--- a/src/suggestions/templates/suggestions/suggestion_list.html
+++ b/src/suggestions/templates/suggestions/suggestion_list.html
@@ -1,17 +1,33 @@
 {% extends "suggestions/base.html" %}
 {% load crispy_forms_tags %}
-{% block pre_heading %}
-<br />
-<p>Want to help improve the Hackerspace? Look through the list of suggestions
-below and vote on those you like and dislike!  You can vote once per day.</p>
-<p>Have your own idea that isn't already suggested below?
-  <a class="btn btn-primary"
-  href="{% url 'suggestions:create' %}">Make a new suggestion</a></p>
+{% block heading_inner %}Suggestions
+    <div class="btn-group">
+        <a href="{% url 'suggestions:list' %}"
+           class="btn {% if not completed_list %}btn-primary{% else %}btn-default{% endif %}">Active</a>
+        <a href="{% url 'suggestions:list_completed' %}"
+           class="btn {% if completed_list %}btn-primary{% else %}btn-default{% endif %}">Completed</a>
+    </div>
 {% endblock %}
-{% block heading_inner %}Suggestions{% endblock %}
 {% block content %}
+<div class="panel panel-primary" >
+    <div class="panel-heading" title="This section is only visible to you">
+        How to get XP by helping to improve the Hackerspace.
+    </div>
+    <div class="panel-body">
+        <p>Look through the list of suggestions below and vote on those you like or dislike by
+        clicking the thumbs up/down buttons beside an active suggestion.</p>
+        <ul>
+              <a class="btn btn-primary pull-right"
+              href="{% url 'suggestions:create' %}">Make a Suggestion</a>
+            <li>For every 10 votes, you will automatically receive a 5 XP Award.</li>
+            <li>If you make a suggestion and it is approved, you will automatically receive a 5 XP Award.</li>
+        </ul>
+    </div>
+</div>
+
+
 <div class="row panel-heading">
-  <div class="col-xs-2">Vote</div>
+  <div class="col-xs-2">{% if not completed_list %}Vote{% endif %}</div>
   <div class="col-xs-1">Score</div>
   <div class="col-xs-6">Suggestion</div>
   <!-- <div class="col-xs-2">User</div> -->
@@ -23,7 +39,7 @@ below and vote on those you like and dislike!  You can vote once per day.</p>
     {% if object.id == active_id %} active {% endif %}
     {% if object.status == 1 %}panel-warning
     {% elif object.status == 2 %}panel-default
-    {% elif object.status == 3 %}panel-success
+{#    {% elif object.status == 3 %}panel-success#}
     {% elif object.status == 4 %}panel-info
     {% elif object.status == 5 %}panel-danger
     {% else %}panel-default
@@ -35,31 +51,32 @@ below and vote on those you like and dislike!  You can vote once per day.</p>
       aria-controls="collapse{{object.id}}"
       data-parent="#accordion" data-toggle="collapse" data-target="#collapse{{object.id}}">
       <div class="row">
-      <h4 class="panel-title">
-        <div class="col-xs-2">
-          <a href="{% url 'suggestions:upvote' object.id %}">
-            <i class="fa fa-lg fa-thumbs-o-up"></i>
-          </a>
-          &nbsp;&nbsp;
-          <a href="{% url 'suggestions:downvote' object.id %}">
-            <i class="fa fa-lg fa-thumbs-o-down"></i>
-          </a>
-        </div>
-        <div class="col-xs-1">{{ object.get_score }}</div>
-        <div class="col-xs-6">{{object.title}}</br><small><a href="{% url 'profiles:profile_detail' object.user.profile.id %}">
-          {{object.user}}</a> - {{object.user.profile}}</small></div>
-        <!-- <div class="col-xs-2">{{object.user}}</div> -->
-        <div class="col-xs-3">
-          {% if object.status == 1 %}Awaiting Approval
-          {% elif object.status == 2 %}Approved for Voting
-          {% elif object.status == 3 %}Completed
-          {% elif object.status == 4 %}unlikely
-          {% elif object.status == 5 %}Denied
-          {% endif %}
-          <br /><small>{{object.status_timestamp|timesince}} ago</small>
-        </div>
-      </h4>
-    </div>
+          <h4 class="panel-title">
+            <div class="col-xs-2">
+              {% if not completed_list %}
+              <a href="{% url 'suggestions:upvote' object.id %}">
+                <i class="fa fa-2x fa-thumbs-o-up"></i></a>
+              &nbsp;&nbsp;
+              <a href="{% url 'suggestions:downvote' object.id %}">
+                <i class="fa fa-2x fa-thumbs-o-down"></i>
+              </a>
+              {% endif %}
+            </div>
+            <div class="col-xs-1">{{ object.get_score }}</div>
+            <div class="col-xs-6">{{object.title}}<br><small><a href="{% url 'profiles:profile_detail' object.user.profile.id %}">
+              {{object.user}}</a> - {{object.user.profile}}</small></div>
+            <!-- <div class="col-xs-2">{{object.user}}</div> -->
+            <div class="col-xs-3">
+              {% if object.status == 1 %}Awaiting Approval
+              {% elif object.status == 2 %}Approved
+              {% elif object.status == 3 %}Completed
+              {% elif object.status == 4 %}Unlikely
+              {% elif object.status == 5 %}Denied
+              {% endif %}
+              <br /><small>{{object.status_timestamp|timesince}} ago</small>
+            </div>
+          </h4>
+      </div>
     </div>
     <div id="collapse{{object.id}}"
       class="panel-collapse collapse {% if object.id == active_id %} in {% endif %}"
@@ -68,10 +85,15 @@ below and vote on those you like and dislike!  You can vote once per day.</p>
         <li class="list-group-item">
           {% if request.user.is_staff %}
           <div class="pull-right">
-            <a class="btn btn-danger" href="{% url 'suggestions:delete' object.id %}" role="button">Delete</a>
-            <a class="btn btn-warning" href="{% url 'suggestions:edit' object.id %}" role="button">Edit</a>
+            <a class="btn btn-info" href="{% url 'suggestions:edit' object.id %}" role="button">Edit</a>
+            {% if object.status != 3 %}
+                <a class="btn btn-danger" href="{% url 'suggestions:reject' object.id %}" role="button">Reject</a>
+            {% endif %}
             {% if object.status != 2 %}
               <a class="btn btn-success" href="{% url 'suggestions:approve' object.id %}" role="button">Approve</a>
+            {% endif %}
+            {% if object.status == 2 %}
+              <a class="btn btn-success" href="{% url 'suggestions:complete' object.id %}" role="button">Complete</a>
             {% endif %}
           </div>
           {% endif %}
@@ -106,4 +128,14 @@ below and vote on those you like and dislike!  You can vote once per day.</p>
   </div>
 {% endfor %}
 </div>
+{% endblock %}
+{% block js %}
+<script>
+// Stop links in accordian from triggering accordian opening and closing
+$(document).ready(function(){
+    $("[data-toggle='collapse'] a").click(function(e) {
+        e.stopPropagation();
+   });
+});
+</script>
 {% endblock %}
