--- a/src/djcytoscape/templates/djcytoscape/quest_map.html
+++ b/src/djcytoscape/templates/djcytoscape/quest_map.html
@@ -33,6 +33,8 @@
 
     {%  endif %}
 
+    <p>Click on a quest to go to it, or click on the blue linked quests to go to connected quest maps. </p>
+
     {% if scape.parent_scape %}
         <p>Back to <a href="{{ scape.parent_scape.get_absolute_url }}">{{ scape.parent_scape }} Quest Map</a></p>
     {% endif %}
