Past submissions visible through quest map

--- a/src/quest_manager/templates/quest_manager/quests.html
+++ b/src/quest_manager/templates/quest_manager/quests.html
@@ -12,7 +12,7 @@
 {% block heading_inner %} {{ heading }}
   {% if request.user.is_staff %}
     <a class="btn btn-primary" href="{% url 'quests:quest_create' %}" role="button">New</a>
-  {% elif available_tab_active and remove_hidden and request.user.profile.hidden_quests %}
+  {% elif available_tab_active and remove_hidden and request.user.profile.hidden_quests and request.user.profile.has_current_course %}
     <a class="btn btn-default" href="{% url 'quests:available_all' %}" role="button">
       Show Hidden Quests <span class="badge badge-muted">{{ request.user.profile.num_hidden_quests }}</span>
     </a>
