--- a/src/quest_manager/templates/quest_manager/preview_content_quests_avail.html
+++ b/src/quest_manager/templates/quest_manager/preview_content_quests_avail.html
@@ -13,7 +13,8 @@
     </div>
     <div class="col-sm-6">
       <ul class="list-unstyled">
-      <li>Repeatable: {% if q.max_repeats = 0 %}No
+      <li>Available without course: {{ q.available_outside_course|yesno }}</li>
+      <li>Repeatable: {% if q.max_repeats = 0 %}no
              {% else %}
                {% if q.max_repeats = -1 %} Unlimited
                {% else %} {{q.max_repeats}} times max
