--- a/src/suggestions/templates/suggestions/suggestion_list.html
+++ b/src/suggestions/templates/suggestions/suggestion_list.html
@@ -11,6 +11,8 @@
 {% endblock %}
 {% block content %}
     <br>
+
+{% if request.user.is_staff or request.user.profile.has_current_course %}
 <div class="panel panel-primary" >
     <div class="panel-heading" title="This section is only visible to you">
         How to get XP by helping to improve the Hackerspace.
@@ -27,110 +29,112 @@
         </ul>
     </div>
 </div>
-
-
-<div class="row panel-heading">
-  <div class="col-xs-2">{% if not completed_list %}Vote{% endif %}</div>
-  <div class="col-xs-1">Score</div>
-  <div class="col-xs-6">Suggestion</div>
-  <!-- <div class="col-xs-2">User</div> -->
-  <div class="col-xs-3">Status</div>
-</div>
-<div class="panel-group panel-group-packed" id="accordion" role="tablist" aria-multiselectable="true">
-{% for object in object_list %}
-  <div class="panel accordian
-    {% if object.id == active_id %} active {% endif %}
-    {% if object.status == 1 %}panel-info
-    {% elif object.status == 2 %}panel-default
-{#    {% elif object.status == 3 %}panel-success#}
-    {% elif object.status == 4 %}panel-info
-    {% elif object.status == 5 %}panel-danger
-    {% else %}panel-default
-    {% endif %}">
-    <div class="panel-heading accordian accordian-trigger
-      {% if object.id == active_id %} active {% endif %}"
-      role="tab" id="heading{{object.id}}"
-      aria-expanded="{% if object.id == active_id %}true{% else %}false{% endif %}"
-      aria-controls="collapse{{object.id}}"
-      data-parent="#accordion" data-toggle="collapse" data-target="#collapse{{object.id}}">
-      <div class="row">
-          <h4 class="panel-title">
-            <div class="col-xs-2">
-              {% if not completed_list and object.status == 2 %}
-              <a href="{% url 'suggestions:upvote' object.id %}">
-                <i class="fa fa-2x fa-thumbs-o-up"></i></a>
-              &nbsp;&nbsp;
-              <a href="{% url 'suggestions:downvote' object.id %}">
-                <i class="fa fa-2x fa-thumbs-o-down"></i>
-              </a>
+  <div class="row panel-heading">
+    <div class="col-xs-2">{% if not completed_list %}Vote{% endif %}</div>
+    <div class="col-xs-1">Score</div>
+    <div class="col-xs-6">Suggestion</div>
+    <!-- <div class="col-xs-2">User</div> -->
+    <div class="col-xs-3">Status</div>
+  </div>
+  <div class="panel-group panel-group-packed" id="accordion" role="tablist" aria-multiselectable="true">
+  {% for object in object_list %}
+    <div class="panel accordian
+      {% if object.id == active_id %} active {% endif %}
+      {% if object.status == 1 %}panel-info
+      {% elif object.status == 2 %}panel-default
+  {#    {% elif object.status == 3 %}panel-success#}
+      {% elif object.status == 4 %}panel-info
+      {% elif object.status == 5 %}panel-danger
+      {% else %}panel-default
+      {% endif %}">
+      <div class="panel-heading accordian accordian-trigger
+        {% if object.id == active_id %} active {% endif %}"
+        role="tab" id="heading{{object.id}}"
+        aria-expanded="{% if object.id == active_id %}true{% else %}false{% endif %}"
+        aria-controls="collapse{{object.id}}"
+        data-parent="#accordion" data-toggle="collapse" data-target="#collapse{{object.id}}">
+        <div class="row">
+            <h4 class="panel-title">
+              <div class="col-xs-2">
+                {% if not completed_list and object.status == 2 %}
+                <a href="{% url 'suggestions:upvote' object.id %}">
+                  <i class="fa fa-2x fa-thumbs-o-up"></i></a>
+                &nbsp;&nbsp;
+                <a href="{% url 'suggestions:downvote' object.id %}">
+                  <i class="fa fa-2x fa-thumbs-o-down"></i>
+                </a>
+                {% endif %}
+              </div>
+              <div class="col-xs-1">{{ object.get_score }}</div>
+              <div class="col-xs-6">{{object.title}}<br><small><a href="{% url 'profiles:profile_detail' object.user.profile.id %}">
+                {{object.user}}</a> - {{object.user.profile}}</small></div>
+              <!-- <div class="col-xs-2">{{object.user}}</div> -->
+              <div class="col-xs-3">
+                {% if object.status == 1 %}Awaiting Approval
+                {% elif object.status == 2 %}Approved
+                {% elif object.status == 3 %}Completed
+                {% elif object.status == 4 %}Unlikely
+                {% elif object.status == 5 %}Denied
+                {% endif %}
+                <br /><small>{{object.status_timestamp|timesince}} ago</small>
+              </div>
+            </h4>
+        </div>
+      </div>
+      <div id="collapse{{object.id}}"
+        class="panel-collapse collapse {% if object.id == active_id %} in {% endif %}"
+        role="tabpanel" aria-labelledby="heading{{object.id}}">
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-buttons">
+            {% if request.user.is_staff %}
+            <div class="pull-right">
+              <a class="btn btn-info" href="{% url 'suggestions:edit' object.id %}" role="button">Edit</a>
+              {% if object.status != 3 %}
+                  <a class="btn btn-danger" href="{% url 'suggestions:reject' object.id %}" role="button">Reject</a>
+              {% endif %}
+              {% if object.status != 2 %}
+                <a class="btn btn-success" href="{% url 'suggestions:approve' object.id %}" role="button">Approve</a>
+              {% endif %}
+              {% if object.status == 2 %}
+                <a class="btn btn-success" href="{% url 'suggestions:complete' object.id %}" role="button">Complete</a>
               {% endif %}
             </div>
-            <div class="col-xs-1">{{ object.get_score }}</div>
-            <div class="col-xs-6">{{object.title}}<br><small><a href="{% url 'profiles:profile_detail' object.user.profile.id %}">
-              {{object.user}}</a> - {{object.user.profile}}</small></div>
-            <!-- <div class="col-xs-2">{{object.user}}</div> -->
-            <div class="col-xs-3">
-              {% if object.status == 1 %}Awaiting Approval
-              {% elif object.status == 2 %}Approved
-              {% elif object.status == 3 %}Completed
-              {% elif object.status == 4 %}Unlikely
-              {% elif object.status == 5 %}Denied
-              {% endif %}
-              <br /><small>{{object.status_timestamp|timesince}} ago</small>
+            {% endif %}
+            <!-- <i class="fa fa-quote-left fa-2x pull-left"></i> -->
+            <div>
+              {{object.description}}
             </div>
-          </h4>
+          </li>
+
+          {% with object.get_comments as target_comments %}
+            {% if target_comments %}
+              <li class="list-group-item list-group-item-info">Suggestion Comments</li>
+              {% include "comments/comments.html" %}
+            {% endif %}
+          {% endwith %}
+
+          <li class="list-group-item list-group-item-info">Comment </li>
+          <li class="list-group-item">
+            {% if not request.user.profile.banned_from_comments %}
+            <form method="POST" action="{% url 'suggestions:comment' object.id %}">{% csrf_token %}
+              {{ comment_form | crispy }}
+              <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment' />
+            </form>
+            {% else %}
+              <p><i class="fa fa-ban text-danger"> </i>
+                Sorry Spammy McTrollson, you've been banned from commenting on announcements.  If you would like this privilege back, you can grovel for forgiveness from Mr C.</p>
+            {% endif %}
+          </li>
+        </ul>
+
       </div>
     </div>
-    <div id="collapse{{object.id}}"
-      class="panel-collapse collapse {% if object.id == active_id %} in {% endif %}"
-      role="tabpanel" aria-labelledby="heading{{object.id}}">
-      <ul class="list-group">
-        <li class="list-group-item list-group-item-buttons">
-          {% if request.user.is_staff %}
-          <div class="pull-right">
-            <a class="btn btn-info" href="{% url 'suggestions:edit' object.id %}" role="button">Edit</a>
-            {% if object.status != 3 %}
-                <a class="btn btn-danger" href="{% url 'suggestions:reject' object.id %}" role="button">Reject</a>
-            {% endif %}
-            {% if object.status != 2 %}
-              <a class="btn btn-success" href="{% url 'suggestions:approve' object.id %}" role="button">Approve</a>
-            {% endif %}
-            {% if object.status == 2 %}
-              <a class="btn btn-success" href="{% url 'suggestions:complete' object.id %}" role="button">Complete</a>
-            {% endif %}
-          </div>
-          {% endif %}
-          <!-- <i class="fa fa-quote-left fa-2x pull-left"></i> -->
-          <div>
-            {{object.description}}
-          </div>
-        </li>
-
-        {% with object.get_comments as target_comments %}
-          {% if target_comments %}
-            <li class="list-group-item list-group-item-info">Suggestion Comments</li>
-            {% include "comments/comments.html" %}
-          {% endif %}
-        {% endwith %}
-
-        <li class="list-group-item list-group-item-info">Comment </li>
-        <li class="list-group-item">
-          {% if not request.user.profile.banned_from_comments %}
-          <form method="POST" action="{% url 'suggestions:comment' object.id %}">{% csrf_token %}
-            {{ comment_form | crispy }}
-            <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment' />
-          </form>
-          {% else %}
-            <p><i class="fa fa-ban text-danger"> </i>
-              Sorry Spammy McTrollson, you've been banned from commenting on announcements.  If you would like this privilege back, you can grovel for forgiveness from Mr C.</p>
-          {% endif %}
-        </li>
-      </ul>
-
-    </div>
+  {% endfor %}
   </div>
-{% endfor %}
-</div>
+{% else %}
+  <p>You need to join a course before voting or suggesting improvements.</p>
+  <p><a href="{% url 'courses:create' %}" class="btn btn-info" role="button">Join a Course</a></p>
+{% endif %}
 {% endblock %}
 {% block js %}
 <script>
