jquery add allowfullscreen on iframe.embed-responsive-item

--- a/src/quest_manager/templates/quest_manager/quest_detail_content.html
+++ b/src/quest_manager/templates/quest_manager/quest_detail_content.html
@@ -37,7 +37,7 @@
                 {% for p in quest.prereqs %}
                   {% if forloop.first %}<ul class="left-aligned"><small>{% endif %}
                   <li><a href="{{ p.get_prereq.get_absolute_url }}">{{ p }}</a></li>
-                  {% if forloop.last %}</ul></small>{% endif %}
+                  {% if forloop.last %}</small></ul>{% endif %}
                 {% empty %}
                   None
                 {% endfor %}</li>
