--- a/src/comments/templates/comments/comments.html
+++ b/src/comments/templates/comments/comments.html
@@ -34,7 +34,7 @@
               <small>&ndash; {{comment.timestamp|timesince}} ago</small>
               {% if comment.flagged %} FLAGGED (students can't see this comment) {% endif %}
             </h5>
-              {{comment.text|safe}}
+              <div class="markdown">{{comment.text|safe}}</div>
               <ul>
               {% for document in comment.document_set.all %}
                 <li><a href="{{ document.docfile.url }}">{{ document.docfile|filename }}</a>
