--- a/src/djcytoscape/templates/djcytoscape/quest_map.html
+++ b/src/djcytoscape/templates/djcytoscape/quest_map.html
@@ -20,6 +20,10 @@
               title = "Recalculate this Map." >
               <i class="fa fa-undo"></i>
             </a>
+            <a class="btn btn-default" href="{% url 'djcytoscape:list' %}" role="button"
+              title = "List all maps" >
+              <i class="fa fa-list-ul"></i>
+            </a>
             <a class="btn btn-warning" href="{% url 'djcytoscape:update' scape.id %}" role="button"
               title = "Edit the Map" >
               <i class="fa fa-edit"></i>
@@ -33,7 +37,9 @@
 
     {%  endif %}
 
-    <p>Click on a quest to go to it, or click on the blue linked quests to go to connected quest maps. </p>
+    <p>Click on a quest to go to it.  A blue quest or badge will take you to a connected map.
+      Some quest are available base on your Rank; see the <a href="{% url 'courses:ranks' %}">Ranks page</a>
+      to view the Rank-based maps.</p>
 
     {% if scape.parent_scape %}
         <p>Back to <a href="{{ scape.parent_scape.get_absolute_url }}">{{ scape.parent_scape }} Quest Map</a></p>
