--- a/src/quest_manager/templates/quest_manager/buttons.html
+++ b/src/quest_manager/templates/quest_manager/buttons.html
@@ -42,7 +42,7 @@
          class="btn btn-success" role="button" href="{% url 'quests:unhide' q.id %}" >
         <i class="fa fa-eye"></i>
       </a>
-    {% elif request.user.profile.has_current_course %}
+    {% elif q.hideable %}
       <a title="Add this to your list of hidden quests"
          class="btn btn-default" role="button" href="{% url 'quests:hide' q.id %}" >
         <i class="fa fa-eye-slash"></i>
