--- a/src/djcytoscape/templates/djcytoscape/quest_map.html
+++ b/src/djcytoscape/templates/djcytoscape/quest_map.html
@@ -38,7 +38,7 @@
     {%  endif %}
 
     <p>Click on a quest to go to it.  A blue quest or badge will take you to a connected map.
-      Some quest are available base on your Rank; see the <a href="{% url 'courses:ranks' %}">Ranks page</a>
+      Some quest are available based on your Rank; see the <a href="{% url 'courses:ranks' %}">Ranks page</a>
       to view the Rank-based maps.</p>
 
     {% if scape.parent_scape %}
