fix #93 external links and fix #98 list styling

--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -434,6 +434,13 @@ to overlap borders ****/
 
 /***********ACCORDIAN COMMENTS *******************************/
 
+/* lists within list-groups */
+ul.list-group ul, ul.list-group ol {
+    margin-bottom: 10px;
+}
+
+
+
 .panel > .list-group > .list-group-item > .list-group {
     margin-bottom: 0px
 }
