--- a/src/templates/javascript.html
+++ b/src/templates/javascript.html
@@ -75,7 +75,9 @@
     }
 
     $(document).ready(function() {
-      // Ensure external links and media open in new tabs by adding target="_blank"
+      // Ensure external links and media open in new tabs by adding target="_blank".
+      // _blank added for comments automatically in python when they are created, so this probabyl only still necessary
+      // for in quest/announcement links
       $("a[href^='http://']").attr("target","_blank");
       $("a[href^='https://']").attr("target","_blank");
       $("a[href^='/media/']").attr("target","_blank");
