--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -400,6 +400,11 @@ to overlap borders ****/
 }
 
 /***********Submission ********************************/
+
+li.file-link {
+    margin-bottom: 5px;
+}
+
 .panel-body-comments {
     padding: 0px;
 }
