Past submissions link

--- a/src/quest_manager/templates/quest_manager/buttons.html
+++ b/src/quest_manager/templates/quest_manager/buttons.html
@@ -15,7 +15,7 @@
       <i class="fa fa-copy"></i>
     </a>
     <a class="btn btn-default" href="{% url 'quests:approved_for_quest' q.id %}" role="button"
-      title = "View all submissions of this quest" >
+      title = "View past submissions of this quest" >
       <i class="fa fa-folder-open-o"></i>
     </a>
     <a class="btn btn-danger" href="{% url 'quests:quest_delete' q.id %}" role="button"
