--- a/src/quest_manager/templates/quest_manager/tab_quests_submission.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_submission.html
@@ -2,7 +2,7 @@
   Quests
     > available (tab_quests_available.html)
     > IN PROGRESS (tab_quests_submission.html)
-    > COMPELTED (tab_quests_submission.html)
+    > COMPELETED (tab_quests_submission.html)
     > PAST COURSES (tab_quests_submission.html)
 -->
 {% load crispy_forms_tags %}
