--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -1,5 +1,5 @@
 <!--
-  Approvals
+  Quest Approvals (quest_approval.html)
     > SUBMITTED (tab_quests_available.html)
     > RETURNED (tab_quests_submission.html)
     > APPROVED (tab_quests_submission.html)
