--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -126,7 +126,7 @@
             {% if not request.user.is_authenticated and not "/accounts/login" in request.get_full_path %}
             <form class="navbar-form navbar-right" method="POST" action="{% url 'account_login' %}"> {% csrf_token %}
                 <div class="input-group input-group-unified input-group-sm">
-                    <input type="text" class="form-control" name="login" placeholder="Username"/>
+                    <input type="text" class="form-control" name="login" placeholder="Username" autofocus />
                     <input type="password" class="form-control" name="password" placeholder="Password"/>
               <span class="input-group-btn">
                 <button type="submit" class="btn btn-default">Sign In</button>
